# MyGraphicLab

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  starter.json
materials/blinn-phong/: frag.glsl  frag_default_pass.glsl  frag_geometry_pass.glsl  frag_lighting_pass.glsl  light1.json  light2.json  render-default-pass.json  render-lighting-pass.json  scene.json  vert_lighting_pass.glsl
materials/canvas/: frag.glsl  render.json  scene.json
materials/include/: pbr-common.glsl  phong-light-common.glsl
materials/pbr/: frag-default-pass.glsl  frag-geometry-pass.glsl  frag-lighting-pass.glsl  frag.glsl  light1.json  render-default-pass.json  render-geometry-pass.json  render-lighting-pass.json  render1.json  scene.json  vert.glsl
materials/phong/: frag.glsl  light1.json  render-default-pass.json  render1.json  scene.json  vert_default_pass.glsl
materials/phong-deferred/: frag_geometry_pass.glsl  frag_lighting_pass.glsl  light1.json  render-geometry-pass.json  render-lighting-pass.json  render.json  scene-geometry-pass.json  scene-lighting-pass.json  scene.json  vert_geometry_pass.glsl  vert_lighting_pass.glsl
materials/pipeline/: deferred.json  forward.json  shadowedForward.json
materials/shadowed-blinn-phong/: floor-default-pass.json  frag_default_pass.glsl  light2.json  scene.json  toad-default-pass.json  toad-depth-pass.json  vert-depth-pass.glsl  vert_default_pass.glsl
materials/skybox/: light1.json  render1.frag.glsl  render1.json  scene.json  skybox.frag.glsl  skybox.json  skybox.vert.glsl
src/: Camera.cpp  Camera.h  Context.cpp  Context.h  Cubemap.cpp  Cubemap.h  DescLoader.cpp  DescLoader.h  FrameBufferObject.cpp  FrameBufferObject.h  IDrawer.cpp  IDrawer.h  IRenderObject.h  IResource.h  ImageUtils.cpp  ImageUtils.h  Mesh.cpp  Mesh.h  MyGraphic.cpp  Pipeline.cpp  Pipeline.h  PipelineDrawer.cpp  PipelineDrawer.h  RenderGroup.cpp  RenderGroup.h  RenderObject.cpp  RenderObject.h  RenderTarget.cpp  RenderTarget.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadowedForwardDrawer.cpp  ShadowedForwardDrawer.h  SimpleDeferredDrawer.cpp  SimpleDeferredDrawer.h  SimpleForwardDrawer.cpp  (+12 more)
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
